# dagger

./: .flake8  .pre-commit-config.yaml  .pyspelling.yml  .readthedocs.yml  404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  ROADMAP.md  byte_strings.py  codecov.yml  commitlint.config.js  dictionary.txt  dump_big_file.py  index.html  mkdocs.yml  pyproject.toml  registries.yaml  search.html  sitemap.xml  streaming_io.py
.github/: PULL_REQUEST_TEMPLATE.md  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  new-feature.md
.github/workflows/: argo-examples.yaml  black.yaml  codeql-analysis.yml  continuous-integration.yaml  documentation.yaml  formatting.yaml  gh-pages.yaml  git.yaml  linting.yaml  publish-gh-pages.yaml  publish-library.yaml  publish.yaml  run-examples-on-argo.yaml  tests.yaml
api/dag/: index.html
api/dsl/: index.html
api/init/: index.html
api/input/: index.html
api/output/: index.html
api/runtime-argo/: index.html
api/runtime-cli/: index.html
api/runtime-local/: index.html
api/serializer/: index.html
api/task/: index.html
argo_workflows_sdk/: __init__.py  dag.py  inputs.py  node.py  outputs.py  serializers.py
argo_workflows_sdk/argo/: __init__.py  v1alpha1.py
argo_workflows_sdk/dag/: __init__.py  topological_sort.py
argo_workflows_sdk/examples/: hello_world.py  passing_parameters.py  static_parallelization.py
argo_workflows_sdk/inputs/: __init__.py  from_node_output.py  from_param.py
argo_workflows_sdk/node/: __init__.py
argo_workflows_sdk/outputs/: __init__.py  from_key.py  from_property.py  from_return_value.py
argo_workflows_sdk/serializers/: __init__.py  errors.py  json.py
assets/excalidraw/: components.excalidraw
code_snippets/argo_runtime/: cluster_workflow_template.py  extra_container_options.py  extra_cron_workflow_options.py  extra_task_options.py  extra_template_options.py  syntax_sugar.py
code_snippets/build_vs_run_time/: hello.py  mixing_decorated_and_undecorated_functions.py
code_snippets/cli_runtime/: imperative.py
dagger/: __init__.py
dagger/dag/: __init__.py  (+2 more)
docs/: README.md  conf.py  dictionary.txt  index.rst  pyproject.toml  quick-start.md
docs/api/: dag.md  dsl.md  init.md  input.md  output.md  runtime-argo.md  runtime-cli.md  runtime-local.md  serializer.md  task.md
docs/assets/excalidraw/: core_data_structures.excalidraw  runtimes.excalidraw
docs/code_snippets/: quick_start.py  yaml_serializer.py
docs/code_snippets/argo_runtime/: cron_workflow.py  extra_dag_template_options.py  extra_workflow_options.py  generate_manifests.py  workflow.py  workflow_template.py
docs/code_snippets/cli_runtime/: declarative.py
docs/code_snippets/dag/: declarative.py  imperative.py
docs/code_snippets/dag_composition/: declarative.py  imperative.py
docs/code_snippets/default_hardcoded_values/: imperative.py
docs/code_snippets/default_values/: imperative.py
docs/code_snippets/hardcoded_values/: imperative.py
docs/code_snippets/map_reduce/: declarative.py  imperative.py
docs/code_snippets/map_reduce/limitations/dag_output_from_partitioned_node/: invalid.py  valid.py
docs/code_snippets/map_reduce/limitations/for_based_on_param/: invalid.py  valid.py
docs/code_snippets/map_reduce/limitations/nested_for_loops/: invalid.py  valid.py
docs/code_snippets/map_reduce/limitations/single_mapping_node/: invalid.py  valid.py
docs/code_snippets/multiple_serializers/: declarative.py  imperative.py
docs/code_snippets/partitioning/: declarative.py
docs/code_snippets/quick_start/: build_dag.py  invoke_dag_with_defaults.py  quick_start.py
docs/code_snippets/single_serializer/: imperative.py
docs/code_snippets/task/: declarative.py  imperative.py
docs/user-guide/: dag-composition.md  dags.md  dsl.md  introduction.md  map-reduce.md  partitioning.md  tasks.md
docs/user-guide/dags/: dags.md  introduction.md  map-reduce.md  partitioning.md  tasks.md
docs/user-guide/runtimes/: alternatives.md  argo.md  cli.md  local.md  write-your-own.md
docs/user-guide/serializers/: alternatives.md  json.md  pickle.md  write-your-own.md
examples/: __init__.py  argo_map_reduce_continue_on.py  argo_specific_extras.py  composite_map_reduce.py  dummy_map_reduce.py  dummy_map_reduce_argo.py  dump_argo_manifest.py  dynamic_parallelization.py  hello_world.py  hello_world_dsl.py  map_reduce.py  map_reduce_declarative.py  map_reduce_imperative.py  map_reduce_to_argo_manifest.py  ml_training_parallel.py  ml_training_sequential.py  mocked_ml_training.py  nested_dags.py  nested_map_reduce.py  passing_parameters.py  simple_training.py  static_parallelization.py
quick-start/: index.html
search/: search_index.json
tests/: __init__.py  test_argo_workflows_sdk.py  test_dagger.py
(+270 files in other folders)
