[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["larribas <lorenzo.s.arribas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.1.2"
myst-parser = "^0.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
